<resources>
    <string name="app_name">Customize Cars</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="edit_username">Enter username</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign up</string>
    <string name="button_done">Done</string>
    <string name="button_back">Back</string>
    <string name="button_google_maps">Google Maps</string>
    <string name="edit_password">Enter password</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_new_customization">Start New Customization</string>
    <string name="button_change_language">Change Language</string>
    <string name="button_languages">Languages</string>
    <string name="title_select_toyota">PLEASE SELECT A MODEL OF TOYOTA</string>
    <string name="button_external_features">PLEASE CLICK TO SELECT EXTERNAL FEATURES</string>
    <string name="button_internal_features">PLEASE CLICK TO SELECT INTERNAL FEATURES</string>
    <string name="button_get_loctation">PLEASE SELECT A LOCATION</string>
    <string name="button_save_and_exit">SAVE AND EXIT</string>
    <string name="button_edit">EDIT</string>
    <string name="button_submit">SUBMIT</string>
    <string name="button_review_order">REVIEW ORDER</string>
    <string name="title_select_year">PLEASE SELECT A YEAR</string>
    <string name="title_select_make">PLEASE SELECT A MAKE</string>
    <string name="title_choose_language">CHOOSE LANGUAGE</string>
    <string name="title_select_location">PLEASE SELECT A LOCATION TO PICK UP ORDER</string>
    <string name="text_select_location">PLEASE SELECT THE GOOGLE MAP BUTTON TO SEE THE DIRECTION</string>
    <string name="title_select_model_infinity">PLEASE SELECT A MODEL OF INFINITY</string>
    <string name="title_select_model_honda">PLEASE SELECT A MODEL OF HONDA</string>
    <string name="title_select_model_ford">PLEASE SELECT A MODEL OF FORD</string>
    <string name="title_select_model_bmw">PLEASE SELECT A MODEL OF BMW</string>
    <string name="title_select_model_acura">PLEASE SELECT A MODEL OF ACURA</string>
    <string name="title_signup">SIGN UP</string>
    <string name="title_edit_information">EDIT INFORMATION</string>
    <string name="title_review_order">PLEASE REVIEW YOUR ORDER</string>
    <string name="title_select_internal">PlEASE SELECT INTERNAL FEATURES</string>
    <string name="title_select_external">PlEASE SELECT EXTERNAL FEATURES</string>
    <string name="text_user_name">USER NAME:</string>
    <string name="text_password">PASSWORD:</string>
    <string name="text_email">EMAIL:</string>
    <string name="text_name">NAME:</string>
    <string name="text_postal_address">POSTAL ADDRESS:</string>
    <string name="text_phone_number">PHONE NUMBER:</string>
    <string name="text_year">Year:</string>
    <string name="text_make">Make:</string>
    <string name="text_model">Model:</string>
    <string name="text_interior">Interior:</string>
    <string name="text_exterior">Exterior:</string>
    <string name="text_location">Location:</string>
    <string name="radio_button_yes">Yes</string>
    <string name="radio_button_no">No</string>
    <string name="radio_button_white">White</string>
    <string name="radio_button_black">Black</string>
    <string name="radio_button_gray">Gray</string>
    <string name="radio_button_blue">Blue</string>
    <string name="radio_button_standard">Standard</string>
    <string name="radio_button_tube">Tube</string>
    <string name="radio_button_step">Step</string>
    <string name="radio_button_deep_drop">Deep Drop</string>
    <string name="radio_button_title_gps">Built-in GPS</string>
    <string name="radio_button_title_dashboard_color">Dashboard Color</string>
    <string name="radio_button_title_screen_size">Screen Size</string>
    <string name="radio_button_title_sun_roof">Sun Roof</string>
    <string name="radio_button_title_wheels">Wheels</string>
    <string name="radio_button_title_bumper">Bumper</string>
    <string name="radio_button_title_engine">Engine</string>

</resources>

