<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InternalActivity">

    <TextView
        android:id="@+id/textinternal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title_select_internal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttoninternaldone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/button_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textinteriorcolor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/radio_button_title_dashboard_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinternal" />

    <RadioGroup
        android:id="@+id/radioGroupcolor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinteriorcolor">

        <RadioButton
            android:id="@+id/radioButtonintwhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_white" />

        <RadioButton
            android:id="@+id/radioButtonintblack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_black" />

        <RadioButton
            android:id="@+id/radioButtonintgray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_gray" />

        <RadioButton
            android:id="@+id/radioButtonintblue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_blue"
            app:layout_constraintStart_toStartOf="parent" />
    </RadioGroup>

    <TextView
        android:id="@+id/textintscreen"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/radio_button_title_screen_size"
        app:layout_constraintStart_toEndOf="@+id/textinteriorcolor"
        app:layout_constraintTop_toBottomOf="@+id/textinternal" />

    <RadioGroup
        android:id="@+id/radioGroupscreen"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toEndOf="@+id/radioGroupcolor"
        app:layout_constraintTop_toBottomOf="@+id/textintscreen">

        <RadioButton
            android:id="@+id/radioButtonint4_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='4.5"' />

        <RadioButton
            android:id="@+id/radioButtonint5_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='5"' />

        <RadioButton
            android:id="@+id/radioButtonint5_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='5.5"' />

        <RadioButton
            android:id="@+id/radioButtonint6_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='6"' />
    </RadioGroup>


    <TextView
        android:id="@+id/textsunroof"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/radio_button_title_sun_roof"
        app:layout_constraintStart_toEndOf="@+id/textintscreen"
        app:layout_constraintTop_toBottomOf="@+id/textinternal" />

    <RadioGroup
        android:id="@+id/radioGroupsunroof"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toEndOf="@+id/radioGroupscreen"
        app:layout_constraintTop_toBottomOf="@+id/textsunroof"
        android:layout_width="90dp">

        <RadioButton
            android:id="@+id/radioButtonsunyes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Yes" />

        <RadioButton
            android:id="@+id/radioButtonsunno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/radio_button_title_gps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupcolor" />

    <RadioGroup
        android:id="@+id/radioGroupgps"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" >

        <RadioButton
            android:id="@+id/radioButtongpsyes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_yes"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/radioButtongpsno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_no" />
    </RadioGroup>

    <TextView
        android:id="@+id/errorinernal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttoninternaldone" />
</androidx.constraintlayout.widget.ConstraintLayout>