<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ToyotaActivity">

    <TextView
        android:id="@+id/texttoyota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/title_select_toyota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radiogrouptoyota"
        android:layout_width="382dp"
        android:layout_height="198dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texttoyota">

        <RadioButton
            android:id="@+id/radioButtoncamry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CAMRY" />

        <RadioButton
            android:id="@+id/radioButtoncorolla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="COROLLA" />

        <RadioButton
            android:id="@+id/radioButtonprius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PRIUS" />

        <RadioButton
            android:id="@+id/radioButtonrav4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RAV4" />

        <RadioButton
            android:id="@+id/radioButtonsienna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SIENNA" />

        <RadioButton
            android:id="@+id/radioButton4runner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="4RUNNER" />

    </RadioGroup>

    <Button
        android:id="@+id/buttoninternal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/button_internal_features"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogrouptoyota" />

    <Button
        android:id="@+id/buttonexternal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/button_external_features"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttoninternal" />

    <Button
        android:id="@+id/buttonlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/button_get_loctation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonexternal" />

    <Button
        android:id="@+id/buttonreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/button_review_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonlocation" />

    <TextView
        android:id="@+id/errortoyota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/texttoyota"
        tools:layout_editor_absoluteX="192dp" />
</androidx.constraintlayout.widget.ConstraintLayout>