<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HondaActivity">

    <TextView
        android:id="@+id/texthonda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/title_select_model_honda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radiogrouphonda"
        android:layout_width="382dp"
        android:layout_height="198dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texthonda">

        <RadioButton
            android:id="@+id/radioButtonaccord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ACCORD" />

        <RadioButton
            android:id="@+id/radioButtoncivic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CIVIC" />

        <RadioButton
            android:id="@+id/radioButtoncrv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CRV" />

        <RadioButton
            android:id="@+id/radioButtonhrv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="HRV" />

        <RadioButton
            android:id="@+id/radioButtonodyssey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ODYSSEY" />

        <RadioButton
            android:id="@+id/radioButtonpilot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PILOT" />

    </RadioGroup>

    <Button
        android:id="@+id/buttoninternal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/button_internal_features"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogrouphonda" />

    <Button
        android:id="@+id/buttonexternal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/button_external_features"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttoninternal" />

    <Button
        android:id="@+id/buttonlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/button_get_loctation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonexternal" />

    <Button
        android:id="@+id/buttonreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/button_review_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonlocation" />

    <TextView
        android:id="@+id/errorhonda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texthonda" />
</androidx.constraintlayout.widget.ConstraintLayout>